@@ -3,6 +3,8 @@ Release history for Importer-Zim-Unit
 
 {{$NEXT}}
 
+    - Produce DEBUG message with carp()
+    - Apply indentation to DEBUG messages
     - Depend on Importer::Zim::Utils 0.8.0+
 
 v0.2     2017-09-25 12:13:02-07:00 America/Los_Angeles
